--- a/Facebook/app/src/main/AndroidManifest.xml
+++ b/Facebook/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.hojune.facebook">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -21,10 +23,11 @@
         <activity android:name=".CreateAccountActivity_3" />
         <activity android:name=".CreateAccountActivity_4" />
         <activity
-            android:name=".CreateAccountActivity_5"
+            android:name=".CreateAccountActivity_6"
             android:theme="@style/Theme.AppCompat.Dialog" />
         <activity android:name=".MyProfileActivity" />
-        <activity android:name=".AddMessageBoard"></activity>
+        <activity android:name=".AddMessageBoard" />
+        <activity android:name=".CreateAccountActivity_5" />
     </application>
 
 </manifest>
