--- a/Facebook/app/src/main/AndroidManifest.xml
+++ b/Facebook/app/src/main/AndroidManifest.xml
@@ -3,25 +3,29 @@
     package="com.hojune.facebook">
 
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-    <!--안드로이드 sd카드만을 의미하는것이 아님, 내장메모리중 개발자가 접근할 수 있는 영역도 외장메모리라고함 -->
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <!-- 안드로이드 sd카드만을 의미하는것이 아님, 내장메모리중 개발자가 접근할 수 있는 영역도 외장메모리라고함 -->
 
-    <uses-feature android:name="android.hardware.camera2"/>
+    <uses-feature android:name="android.hardware.camera2" />
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/app"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/app"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name=".activity.LoginActivity">
+        android:theme="@style/AppTheme"
+        android:name="com.hojune.facebook.MyApplication">
+        <!--<activity android:name=".activity.LoginActivity">-->
+        <activity android:name=".activity.SplashActivity"
+            android:theme="@style/SplashTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".activity.LoginActivity" />
         <activity android:name=".activity.CreateAccountActivityOne" />
         <activity android:name=".activity.CreateAccountActivityTwo" />
         <activity android:name=".activity.CreateAccountActivityThree" />
@@ -30,14 +34,15 @@
             android:name=".activity.CreateAccountActivitySix"
             android:theme="@style/Theme.AppCompat.Dialog" />
         <!-- <activity android:name=".fragment.MyProfileFragment" /> -->
-        <activity android:name=".activity.AddTimeLineActivity" />
+        <activity android:name=".activity.AddTimeLineActivity"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar"/>
         <activity android:name=".activity.CreateAccountActivityFive" />
         <!-- <activity android:name=".fragment.TimeLineFragment" /> -->
         <activity android:name=".activity.MainActivity" />
         <activity android:name=".activity.FindFriend" />
         <activity android:name=".activity.WriteProfileActivity" />
         <activity android:name=".activity.FriendProfileActivity" />
-        <activity android:name=".activity.FriendListActivity"></activity>
+        <activity android:name=".activity.FriendListActivity" />
     </application>
 
 </manifest>
